refactor(maker): update some code comment